--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,3 +11,11 @@ jobs:
     - uses: actions/checkout@v4
     - run: sudo apt-get -y install make gcc-arm-none-eabi
     - run: make
+
+  pre-commit:
+    runs-on: ubuntu-24.04
+    steps:
+    - uses: actions/checkout@v2
+    - uses: actions/setup-python@v2
+    - run: pip install pre-commit
+    - run: pre-commit run --show-diff-on-failure --color=always --all-files
